--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <version>1.7.32</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
