--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.11.2</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
